modified:   docs/about.md 	modified:   docs/index.md 	modified:   docs/projects/pibicut/guide.md 	modified:   docs/projects/pibicut/index.md 	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
   - Home: index.md
   - About pibiCo: about.md
   - Projects:
-      - pibicut:
+      - PibiCut:
           - Inicio: projects/pibicut/index.md
           - Guía: projects/pibicut/guide.md
 
