modified:   docs/about.md 	modified:   mkdocs.yml 	modified:   site/404.html 	modified:   site/about/index.html 	new file:   site/assets/images/favicon.ico 	renamed:    site/assets/pibico_icon.png -> site/assets/images/logo.png 	modified:   site/index.html 	modified:   site/projects/pibicut/guide/index.html 	modified:   site/projects/pibicut/index.html 	modified:   site/sitemap.xml 	modified:   site/sitemap.xml.gz

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_url: https://pibico.github.io/portal/
 theme:
   name: material
   logo: assets/images/logo.png
-  favicon: assets/images/favicon.png
+  favicon: assets/images/favicon.ico
   language: es
   features:
     - navigation.sections      # Sidebar organizado por secciones
