--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,27 @@
-site_name: Documentation portal
-site_description: the central documentation portal for our OSS projects
+site_name: pibiCo - Documentation portal
+site_description: pibiCo documentation portal for OSS projects
 site_url: https://pibico.github.io/portal/
 
 theme:
   name: material
   logo: assets/images/logo.png
   favicon: assets/images/favicon.ico
-  language: es
+  language: en
+  palette:
+    scheme: slate
+    primary: black
+    accent: light blue
   features:
     - navigation.sections      # Sidebar organizado por secciones
     - navigation.tabs          # Navegación tipo pestañas
+    - navigation.tabs.sticky   # Tabs visibles siempre
+    - navigation.path          # Incluye navegación de migas de pan
+    - navigation.prune         # Poda páginas que no están en uso 
+    - toc.follow               # Anclajes - barra lateral se desplaza automáticamente de modo que el anclaje activo siempre esté visible
+    - toc.integrate            # se representa como parte de la barra lateral de navegación de la izquierda
     - search.highlight         # Resaltar palabras buscadas
     - search.suggest           # Sugerencias en búsqueda
+    - navigation.footer        # Navegación inferior a página anterior y siguiente
 
 plugins:
   - search
@@ -21,8 +31,11 @@ nav:
   - About pibiCo: about.md
   - Projects:
       - PibiCut:
-          - Inicio: projects/pibicut/index.md
-          - Guía: projects/pibicut/guide.md
+          - Intro: projects/pibicut/index.md
+          - Guide: projects/pibicut/guide.md
+      - PibiCal:
+          - Intro: projects/pibical/index.md
+          - Guide: projects/pibical/guide.md
 
 extra:
   homepage: https://www.pibico.es
