renamed:    docs/projects/pibical/guide.md -> docs/apps/pibical/guide.md 	renamed:    docs/projects/pibical/index.md -> docs/apps/pibical/index.md 	renamed:    docs/projects/pibicut/guide.md -> docs/apps/pibicut/guide.md 	renamed:    docs/projects/pibicut/images/pibicut_exe0.png -> docs/apps/pibicut/images/pibicut_exe0.png 	new file:   docs/apps/pibicut/index.md 	modified:   docs/index.md 	deleted:    docs/projects/pibicut/index.md 	modified:   mkdocs.yml 	modified:   site/index.html 	modified:   site/search/search_index.json 	modified:   site/stylesheets/extra.css

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,9 +28,9 @@ plugins:
 nav:
   - Home: index.md
   - About pibiCo: about.md
-  - Projects:
-      - PibiCut Guide: projects/pibicut/guide.md
-      - PibiCal Guide: projects/pibical/guide.md
+  - Apps:
+      - pibiCut Guide: apps/pibicut/guide.md
+      - pibiCal Guide: apps/pibical/guide.md
 
 extra_css:
   - stylesheets/extra.css
