modified:   docs/apps/pibical/guide.md 	modified:   docs/apps/pibical/index.md 	new file:   docs/apps/pibicard/guide.md 	new file:   docs/apps/pibicard/index.md 	modified:   docs/apps/pibicut/guide.md 	modified:   docs/apps/pibicut/index.md 	new file:   docs/apps/pibidav/guide.md 	new file:   docs/apps/pibidav/index.md 	new file:   docs/apps/pibidesk/guide.md 	new file:   docs/apps/pibidesk/index.md 	new file:   docs/apps/pibioffline/guide.md 	new file:   docs/apps/pibioffline/index.md 	modified:   mkdocs.yml 	modified:   site/404.html 	modified:   site/about/index.html 	renamed:    site/projects/pibical/guide/index.html -> site/apps/pibical/guide/index.html 	renamed:    site/projects/pibical/index.html -> site/apps/pibical/index.html 	renamed:    site/projects/pibicut/guide/index.html -> site/apps/pibicut/guide/index.html 	renamed:    site/projects/pibicut/images/pibicut_exe0.png -> site/apps/pibicut/images/pibicut_exe0.png 	renamed:    site/projects/pibicut/index.html -> site/apps/pibicut/index.html 	modified:   site/index.html 	modified:   site/search/search_index.json 	modified:   site/sitemap.xml 	modified:   site/sitemap.xml.gz

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,8 +29,19 @@ nav:
   - Home: index.md
   - About pibiCo: about.md
   - Apps:
-      - pibiCut Guide: apps/pibicut/guide.md
-      - pibiCal Guide: apps/pibical/guide.md
+      - pibiCut: apps/pibicut/index.md
+      - pibiCal: apps/pibical/index.md
+      - pibiCard: apps/pibicard/index.md
+      - pibiDAV: apps/pibidav/index.md
+      - pibiDesk: apps/pibidesk/index.md
+      - pibiOffline: apps/pibioffline/index.md
+      - Guides:
+        - pibiCut: apps/pibicut/guide.md
+        - pibiCal: apps/pibical/guide.md
+        - pibiCard: apps/pibicard/guide.md
+        - pibiDAV: apps/pibidav/guide.md
+        - pibiDesk: apps/pibidesk/guide.md
+        - pibiOffline: apps/pibioffline/guide.md
 
 extra_css:
   - stylesheets/extra.css
