modified:   docs/index.md 	new file:   layouts/custom.yml 	modified:   mkdocs.yml 	modified:   site/404.html 	modified:   site/about/index.html 	modified:   site/apps/pibical/guide/index.html 	modified:   site/apps/pibical/index.html 	new file:   site/apps/pibicard/guide/index.html 	new file:   site/apps/pibicard/index.html 	modified:   site/apps/pibicut/guide/index.html 	modified:   site/apps/pibicut/index.html 	new file:   site/apps/pibidav/guide/index.html 	new file:   site/apps/pibidav/index.html 	new file:   site/apps/pibidesk/guide/index.html 	new file:   site/apps/pibidesk/index.html 	new file:   site/apps/pibioffline/guide/index.html 	new file:   site/apps/pibioffline/index.html 	modified:   site/index.html 	modified:   site/search/search_index.json 	modified:   site/sitemap.xml 	modified:   site/sitemap.xml.gz

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,12 @@ theme:
 
 plugins:
   - search
+  - optimize
+  - social:
+      cards_layout_dir: layouts
+      cards_layout: custom
+      debug: true
+
 
 nav:
   - Home: index.md
