B#	new file:   .cache/plugin/social/fonts/Roboto/Condensed Thin Italic.ttf A#	new file:   .cache/plugin/social/fonts/Roboto/SemiCondensed Light Italic.ttf 	modified:   layouts/custom.yml 	modified:   mkdocs.yml 	new file:   overrides/.icons/bootstrap/pibico-card.svg 	modified:   site/index.html 	modified:   site/search/search_index.json

--- a/layouts/custom.yml
+++ b/layouts/custom.yml
@@ -5,7 +5,7 @@ layers:
   - size: { width: 144, height: 144 }
     offset: { x: 20, y: 20 }
     icon:
-      value: assets/images/favicon
+      value: bootstrap/pibico-card
   - size: { width: 950, height: 310 }
     offset: { x: 150, y: 150 }
     typography:
