--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,6 @@ theme:
 
 plugins:
   - search
-  - optimize
   - social:
       cards_layout_dir: layouts
       cards_layout: custom
@@ -62,5 +61,14 @@ extra:
     - icon: fontawesome/brands/youtube
       link: https://www.youtube.com/channel/UCZ_aFZHXy-fIXBoyLyHollg  
 
+markdown_extensions:
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      options:
+        custom_icons:
+          - overrides/.icons
+
 copyright: >
   © 2026 pibiCo · Documentation portal for our OSS projects
+  
