new file:   .cache/plugin/social/assets/images/social/about.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibical/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibical/index.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibicard/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibicard/index.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibicut/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibicut/index.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibidav/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibidav/index.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibidesk/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibidesk/index.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibioffline/guide.png 	new file:   .cache/plugin/social/assets/images/social/apps/pibioffline/index.png 	new file:   .cache/plugin/social/assets/images/social/index.png 	modified:   .cache/plugin/social/manifest.json 	modified:   docs/assets/images/logo.png 	new file:   docs/assets/images/logo_original.png 	modified:   docs/stylesheets/extra.css 	new file:   layouts/background.jpg 	deleted:    layouts/custom.yml 	modified:   mkdocs.yml 	deleted:    overrides/.icons/bootstrap/pibico-card.svg 	modified:   site/404.html 	modified:   site/about/index.html 	modified:   site/apps/pibical/guide/index.html 	modified:   site/apps/pibical/index.html 	modified:   site/apps/pibicard/guide/index.html 	modified:   site/apps/pibicard/index.html 	modified:   site/apps/pibicut/guide/index.html 	modified:   site/apps/pibicut/index.html 	modified:   site/apps/pibidav/guide/index.html 	modified:   site/apps/pibidav/index.html 	modified:   site/apps/pibidesk/guide/index.html 	modified:   site/apps/pibidesk/index.html 	modified:   site/apps/pibioffline/guide/index.html 	modified:   site/apps/pibio

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: pibiCo - Documentation portal
-site_description: pibiCo documentation portal for OSS projects
+site_description: Open Source Applications for Frappe framework
 site_url: https://pibico.github.io/portal/
 
 theme:
@@ -9,8 +9,8 @@ theme:
   language: en
   palette:
     scheme: slate
-    primary: black
-    accent: light blue
+    primary: pibico
+    accent: pibico
   features:
     - navigation.tabs          # Navegación tipo pestañas
     - navigation.tabs.sticky   # Tabs visibles siempre
@@ -24,11 +24,7 @@ theme:
 
 plugins:
   - search
-  - social:
-      cards_layout_dir: layouts
-      cards_layout: custom
-      debug: true
-
+  - social
 
 nav:
   - Home: index.md
@@ -71,4 +67,3 @@ markdown_extensions:
 
 copyright: >
   © 2026 pibiCo · Documentation portal for our OSS projects
-  
