new file:   .cache/plugin/social/assets/images/social/blog/index.png 	new file:   .cache/plugin/social/assets/images/social/blog/post/vision.png 	modified:   .cache/plugin/social/manifest.json 	new file:   docs/blog/.authors.yml 	new file:   docs/blog/index.md 	new file:   docs/blog/post/vision.md 	modified:   mkdocs.yml 	modified:   site/404.html 	modified:   site/about/index.html 	modified:   site/apps/pibical/guide/index.html 	modified:   site/apps/pibical/index.html 	modified:   site/apps/pibicard/guide/index.html 	modified:   site/apps/pibicard/index.html 	modified:   site/apps/pibicut/guide/index.html 	modified:   site/apps/pibicut/index.html 	modified:   site/apps/pibidav/guide/index.html 	modified:   site/apps/pibidav/index.html 	modified:   site/apps/pibidesk/guide/index.html 	modified:   site/apps/pibidesk/index.html 	modified:   site/apps/pibioffline/guide/index.html 	modified:   site/apps/pibioffline/index.html 	new file:   site/assets/images/social/blog/index.png 	new file:   site/assets/images/social/blog/post/vision.png 	new file:   site/blog/index.html 	new file:   site/blog/post/vision/index.html 	modified:   site/index.html 	modified:   site/search/search_index.json 	modified:   site/sitemap.xml 	modified:   site/sitemap.xml.gz

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ theme:
 plugins:
   - search
   - social
+  - blog
 
 nav:
   - Home: index.md
@@ -43,6 +44,8 @@ nav:
         - pibiDAV: apps/pibidav/guide.md
         - pibiDesk: apps/pibidesk/guide.md
         - pibiOffline: apps/pibioffline/guide.md
+  - Blog:
+    - blog/index.md
 
 extra_css:
   - stylesheets/extra.css
