modified:   docs/stylesheets/extra.css 	modified:   mkdocs.yml 	modified:   site/404.html 	modified:   site/about/index.html 	modified:   site/apps/pibical/guide/index.html 	modified:   site/apps/pibical/index.html 	modified:   site/apps/pibicard/guide/index.html 	modified:   site/apps/pibicard/index.html 	modified:   site/apps/pibicut/guide/index.html 	modified:   site/apps/pibicut/index.html 	modified:   site/apps/pibidav/guide/index.html 	modified:   site/apps/pibidav/index.html 	modified:   site/apps/pibidesk/guide/index.html 	modified:   site/apps/pibidesk/index.html 	modified:   site/apps/pibioffline/guide/index.html 	modified:   site/apps/pibioffline/index.html 	modified:   site/assets/stylesheets/main.484c7ddc.min.css 	modified:   site/assets/stylesheets/palette.ab4e12ef.min.css 	modified:   site/blog/2026/01/15/vision/index.html 	modified:   site/blog/archive/2026/index.html 	modified:   site/blog/category/general/index.html 	modified:   site/blog/index.html 	modified:   site/index.html 	modified:   site/stylesheets/extra.css

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,8 +8,8 @@ theme:
   favicon: assets/images/favicon.ico
   language: en
   palette:
-    scheme: slatepibico
-    primary: pibico
+    scheme: slate
+    primary: custom
     accent: pibico
   features:
     - navigation.tabs          # Navegación tipo pestañas
